# spectrum

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.ebextensions/: django.config
.github/workflows/: django.yml
about/: urls.py  views.py
docs/source/: conf.py  index.rst
help/: urls.py  views.py
info/: admin.py  context_processors.py  documents.py  factories.py  forms.py  models.py  tests.py  urls.py  views.py
info/migrations/: 0001_initial.py  0002_organisation_website.py  0003_remove_event_slug_remove_location_slug_and_more.py  0004_organisation_logo.py  0005_event_date_time.py  0006_organisation_friends.py  0007_rename_friends_organisation_users.py  0008_remove_organisation_users_organisation_admin.py  0009_event_ticketed_event_tickets_event_tickets_purchased.py  0010_remove_organisation_logo.py  0011_event_duration.py  0012_rename_date_time_event_end_date_time_and_more.py  0013_contact.py  0014_event_contact.py  0015_alter_event_price_currency.py  0016_add_pg_trgm.py  0017_contact_organisation.py  0018_alter_contact_organisation.py  0019_scheduler.py  0020_alter_scheduler_cron.py  0021_alter_scheduler_cron_alter_scheduler_event.py  0022_alter_event_managers.py  0023_alter_event_managers_remove_event_tickets_and_more.py  0024_alter_event_unique_together.py  0025_alter_event_schedules.py  (+20 more)
neurodb/: asgi.py  settings.py  urls.py  wsgi.py
spectrum/: asgi.py  urls.py  wsgi.py
templates/: base.html
tests/: __init__.py  factories.py  neurodb.py  spectrum.py
(+129 files in other folders)
